lib/stratiform/res/test/stratiform/corpus/neg/e201-duplicate-keyword-in-struct.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e202-test

document
  field foo string
  field foo string
